[gd_scene load_steps=11 format=3 uid="uid://ddxs681lk6j5i"]

[ext_resource type="Script" path="res://entity/enemy/maggot/maggot.gd" id="1_23b4d"]
[ext_resource type="PackedScene" uid="uid://bd4tgln0hqfu0" path="res://manager/health_manager/health_manager.tscn" id="1_pr854"]
[ext_resource type="Script" path="res://manager/area_box/hit_box/hit_area.gd" id="2_5xlie"]
[ext_resource type="Texture2D" uid="uid://pl2lgrb8qhdx" path="res://assets/enemy/pngwing.com copy.png" id="3_5f06h"]
[ext_resource type="Script" path="res://manager/area_box/hurt_box/hurt_area.gd" id="3_8mref"]
[ext_resource type="Script" path="res://manager/machine_state.gd" id="5_sf6gs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_we8l1"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cvsd5"]
radius = 23.0868

[sub_resource type="CircleShape2D" id="CircleShape2D_iicwt"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iujtn"]
radius = 0.01

[node name="Maggot" type="CharacterBody2D" groups=["enemy", "maggot"]]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_23b4d")

[node name="HealthBar" parent="." node_paths=PackedStringArray("hit_box") instance=ExtResource("1_pr854")]
modulate = Color(1, 0.239216, 0.239216, 0)
offset_left = -4.0
offset_top = -8.0
offset_right = 16.0
offset_bottom = -4.0
scale = Vector2(0.34, 0.34)
hit_box = NodePath("../HitBox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_we8l1")

[node name="MaggotSprite" type="Sprite2D" parent="."]
scale = Vector2(0.002, 0.002)
texture = ExtResource("3_5f06h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("CircleShape2D_cvsd5")

[node name="HitBox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("2_5xlie")
health_component = NodePath("../HealthBar")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_iicwt")

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("3_8mref")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_iujtn")

[node name="machine_state" type="Node" parent="."]
script = ExtResource("5_sf6gs")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="die" from="HealthBar" to="." method="_on_health_bar_die"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_detect_area_body_exited"]
